add final touches

--- a/src/style.css
+++ b/src/style.css
@@ -91,7 +91,7 @@ main {
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
-  background-repeat: repeat;
+  background-color: hsl(180, 100%, 90%);
   background-size: contain;
 }
 
