Add test file for item counter

--- a/src/style.css
+++ b/src/style.css
@@ -174,7 +174,7 @@ button:hover {
   background-position-x: right;
   background-position-y: bottom;
   background-repeat: no-repeat;
-  background-color: black;
+  background-color: hsl(240, 100%, 20%);
   z-index: 5;
 }
 
